objects/Query__c.object
<CustomObject>
    <description>Provides users with the ability to associate external queries with &quot;INTERPOL Cases&quot; aka &quot;Complaint Cases&quot;</description>
    <fields>
        <fullName>Database__c</fullName>
        <inlineHelpText>&quot;What database did you use to search?&quot;</inlineHelpText>
        <label>Database</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>I-24/7</fullName>
                </value>
                <value>
                    <fullName>NCIC</fullName>
                </value>
                <value>
                    <fullName>TECS</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>OIA Database</fullName>
                </value>
                <value>
                    <fullName>IW-CWS</fullName>
                </value>
                <value>
                    <fullName>RISSNet</fullName>
                </value>
                <value>
                    <fullName>Report Hub</fullName>
                </value>
                <value>
                    <fullName>eASF2</fullName>
                </value>
                <value>
                    <fullName>Notice Processing Center</fullName>
                </value>
                <value>
                    <fullName>OIA Assignments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>INTERPOL_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>INTERPOL Case</label>
        <referenceTo>ComplaintCase</referenceTo>
        <relationshipLabel>Queries</relationshipLabel>
        <relationshipName>Queries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <inlineHelpText>When you ran the query, did the result come back with a 

Positive: A match or a result comes back outside of USNCB data

Negative: No match or only match of USNCB Data

Possible Match: Not Sure</inlineHelpText>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Possible Match</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Input_Criteria__c</fullName>
        <inlineHelpText>Please copy and paste the information you queried in the respective external system</inlineHelpText>
        <label>Search Input Criteria</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Search_Parameters__c</fullName>
        <inlineHelpText>&quot;What key terms were used in your search?&quot;</inlineHelpText>
        <label>Search Parameters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <description>*****Need to create a validation rule. If the character limit is hit, inform the user to upload the query results as an attachment.*****</description>
        <label>Text</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>USNCB_Result__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was the result only for USNCB data. (only for negative results)?</inlineHelpText>
        <label>USNCB Result</label>
        <type>Checkbox</type>
    </fields>
    <label>Queries</label>
    <nameField>
        <label>Query Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Queries</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>